--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
-APP_NAME=
-APP_VERSION=
-APP_DEBUG=
-APP_ENV=
+APP_NAME=Pennytracker
+APP_VERSION=1.0
+APP_DEBUG=0
+APP_URL=
+APP_KEY=
+APP_ENV=production
 DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+MAILER_DSN=
+MAILER_FROM=
+REDIS_HOST=localhost
+REDIS_PASSWORD=
+S3_KEY=
+S3_SECRET=
+S3_REGION=fra1
+S3_VERSION=latest
+S3_ENDPOINT=https://fra1.digitaloceanspaces.com
+S3_BUCKET=
