--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,12 @@ DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+MAILER_DRIVER
 MAILER_DSN=
 MAILER_FROM=
 REDIS_HOST=localhost
 REDIS_PASSWORD=
+REDIS_PORT=6379
 S3_KEY=
 S3_SECRET=
 S3_REGION=fra1
