--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,10 @@ MAILER_FROM=
 REDIS_HOST=localhost
 REDIS_PASSWORD=
 REDIS_PORT=6379
+STORAGE_DRIVER=
 S3_KEY=
 S3_SECRET=
-S3_REGION=fra1
+S3_REGION=
 S3_VERSION=latest
-S3_ENDPOINT=https://fra1.digitaloceanspaces.com
+S3_ENDPOINT=
 S3_BUCKET=
